Fixed Client initialization