@@ -2,16 +2,21 @@ package pt.tecnico.sec.bftb.client;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.security.*;
 import java.security.spec.InvalidKeySpecException;
+import java.security.spec.PKCS8EncodedKeySpec;
+import java.security.spec.RSAKeyGenParameterSpec;
 import java.security.spec.X509EncodedKeySpec;
 import java.util.Objects;
 
 public class Resources {
 
-	private static final String KEYPAIR_PATH = "keypairs/";
+	private static final String KEYPAIR_PATH = "keypairs";
 
 	private Resources() { /* empty */ }
 
@@ -20,7 +25,8 @@ public class Resources {
 		if (!checkIfKeyPairExists(userId)) generateKeyPair(userId);
 
 		try {
-			InputStream keyStream = Resources.class.getClassLoader().getResourceAsStream(KEYPAIR_PATH + userId + "/public.key");
+			String pathString = Path.of(KEYPAIR_PATH, userId, "public.key").toString();
+			InputStream keyStream = Resources.class.getClassLoader().getResourceAsStream(pathString);
 			assert keyStream != null;
 			byte[] keyBytes = keyStream.readAllBytes();
 			X509EncodedKeySpec spec = new X509EncodedKeySpec(keyBytes);
@@ -36,10 +42,11 @@ public class Resources {
 		if (!checkIfKeyPairExists(userId)) generateKeyPair(userId);
 
 		try {
-			InputStream keyStream = Resources.class.getClassLoader().getResourceAsStream(KEYPAIR_PATH + userId + "/private.key");
+			String pathString = Path.of(KEYPAIR_PATH, userId, "private.key").toString();
+			InputStream keyStream = Resources.class.getClassLoader().getResourceAsStream(pathString);
 			assert keyStream != null;
 			byte[] keyBytes = keyStream.readAllBytes();
-			X509EncodedKeySpec spec = new X509EncodedKeySpec(keyBytes);
+			PKCS8EncodedKeySpec spec = new PKCS8EncodedKeySpec(keyBytes);
 			return KeyFactory.getInstance("RSA").generatePrivate(spec);
 		}
 		catch (IOException | InvalidKeySpecException | NoSuchAlgorithmException e) {
@@ -55,21 +62,23 @@ public class Resources {
 			PublicKey publicKey = keyPair.getPublic();
 			PrivateKey privateKey = keyPair.getPrivate();
 
-			String keyPairsPathString = Objects.requireNonNull(Resources.class.getClassLoader().getResource(KEYPAIR_PATH)).getPath();
-			Path keypairPath = Path.of( keyPairsPathString + "/" + userId);
+			URL resource = Resources.class.getClassLoader().getResource(".");
+			assert resource != null;
+			Path resourcesPath = Paths.get(resource.toURI());
+			Path keypairPath = resourcesPath.resolve(KEYPAIR_PATH).resolve(userId);
 			Files.createDirectories(keypairPath);
 
 			Files.write(keypairPath.resolve("public.key"), publicKey.getEncoded());
 			Files.write(keypairPath.resolve("private.key"), privateKey.getEncoded());
 		}
-		catch (NullPointerException | NoSuchAlgorithmException | IOException e) {
+		catch (NullPointerException | NoSuchAlgorithmException | IOException | URISyntaxException e) {
 			throw new RuntimeException(e);
 		}
 	}
 
 	private static boolean checkIfKeyPairExists(String userId) {
-		return Resources.class.getClassLoader().getResource(KEYPAIR_PATH + userId) != null &&
-				Resources.class.getClassLoader().getResource(KEYPAIR_PATH + userId + "/public.key") != null &&
-				Resources.class.getClassLoader().getResource(KEYPAIR_PATH + userId + "/private.key") != null;
+		return Resources.class.getClassLoader().getResource(Path.of(KEYPAIR_PATH, userId).toString()) != null &&
+				Resources.class.getClassLoader().getResource(Path.of(KEYPAIR_PATH, userId, "public.key").toString()) != null &&
+				Resources.class.getClassLoader().getResource(Path.of(KEYPAIR_PATH, userId, "private.key").toString()) != null;
 	}
 }
